--- a/pom.xml
+++ b/pom.xml
@@ -163,9 +163,9 @@
             <version>1.11.4</version>
         </dependency>
         <dependency>
-	    <groupId>org.apache.felix</groupId>
-	    <artifactId>org.apache.felix.converter</artifactId>
-	    <version>1.0.14</version>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.util.converter</artifactId>
+            <version>1.0.9</version>
         </dependency>
 	<dependency>
             <groupId>org.apache.sling</groupId>
