--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-feature-converter-maven-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-feature-converter-maven-plugin.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-feature-converter-maven-plugin.git</url>
+        <url>https://github.com/apache/sling-feature-converter-maven-plugin.git</url>
         <tag>HEAD</tag>
     </scm>
 
