--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
-        <version>52</version>
+        <version>65</version>
         <relativePath />
     </parent>
 
@@ -39,10 +39,8 @@
     </scm>
 
     <properties>
-        <sling.java.version>8</sling.java.version>
-        <plexus-component-metadata.version>1.7.1</plexus-component-metadata.version>
-        <jackrabbit-spi-commons.version>2.18.4</jackrabbit-spi-commons.version>
-        <jackrabbit-api.version>2.18.4</jackrabbit-api.version>
+        <sling.java.version>11</sling.java.version>
+        <plexus-component-metadata.version>2.2.0</plexus-component-metadata.version>
         <javax.json.version>1.0.4</javax.json.version>
         <org.apache.jackrabbit.vault.version>3.2.8</org.apache.jackrabbit.vault.version>
         <maven.version>3.8.1</maven.version>
@@ -115,7 +113,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-invoker-plugin</artifactId>
-                <version>3.2.1</version>
                 <configuration>
                     <debug>true</debug>
                     <projectsDirectory>src/it</projectsDirectory>
@@ -154,7 +151,7 @@
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-spi-commons</artifactId>
-            <version>${jackrabbit-spi-commons.version}</version>
+            <version>${jackrabbit.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -195,8 +192,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
-            <artifactId>jackrabbit-api</artifactId>
-            <version>${jackrabbit-api.version}</version>
+            <artifactId>oak-jackrabbit-api</artifactId>
+            <version>${oak.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
